# flix-launcher

./: Cargo.toml  Readme.md  default.nix
src/: main.rs
ui/: main.slint
