[package]
name = "flix-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
color = "0.2.2"
serde = "1.0.217"
slint = { version = "1.9.1", features = ["serde"] }
toml = "0.8.19"

[build-dependencies]
slint-build = "1.9.1"
